<resources>
    <string name="app_name">Dns Widget</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_custom_dns">Custom DNS</string>
    <string name="action_dns_test">DNS Speed Test</string>
    <string name="speed_test_string">Speed Test</string>
    <string name="action_app_filter">App Filter</string>
    <string name="action_share">Share</string>
    <string name="action_rate_us">Rate-Us</string>
    <string name="action_more_app">More App</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_setting">Setting</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_more_option">More Option</string>
    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="app_version_text">App Version : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>
    <string name="choose_a_dns_provider_text">Choose a DNS provider</string>
    <string name="dns1_text">DNS 1</string>
    <string name="dns2_text">DNS 2 (Optional)</string>
    <string name="dns3_text">DNSv6 1</string>
    <string name="dns4_text">DNSv6 2 (Optional)</string>
    <string name="use_dns_v6_text">Use DNS v6</string>
    <string name="use_dns_v4_text">Use DNS v4</string>
    <string name="name_text">Name</string>
    <string name="cancel_text">Cancel</string>
    <string name="add_custom_dns_text">Add Custom DNS</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="copy_text">Copy</string>
    <string name="error_vpn_text">Error in configure VPN </string>
    <string name="could_not_configure_vpn_service">Check if you use an always on VPN service like WiFi Assistant and disable it</string>
    <string name="dns_channel_id">DNS Notification</string>
    <string name="notification_action_pause">Pause</string>
    <string name="start_text">Start Dns</string>
    <string name="stop_text">Stop Dns </string>
    <string name="stopping_text">Stopping…</string>
    <string name="notification_starting">Starting</string>
    <string name="notification_running">Active</string>
    <string name="notification_stopping">Stopping</string>
    <string name="notification_waiting_for_net">Waiting for network</string>
    <string name="notification_reconnecting">Reconnecting</string>
    <string name="notification_reconnecting_error">Reconnecting error</string>
    <string name="notification_stopped">Stopped</string>
    <string name="notification_title">DNS66</string>
    <string name="notifications_running">Running service</string>
    <string name="notifications_running_desc">Notifications to interact with running service</string>
    <string name="notifications_update">Status</string>
    <string name="network_speed_text">Network Speed</string>
    <string name="notifications_update_desc">Notifications about updating hostfiles</string>
    <string name="notifications_speed_test_desc">Notifications about Network Speed</string>
    <string name="notifications_paused">Paused service</string>
    <string name="notifications_paused_desc">Notifications to resume after pausing</string>
    <string name="notifications_group_service">Service control</string>
    <string name="notifications_group_updates">Updates</string>
    <string name="firebase_channel_id" translatable="false">Push Notification</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="notification_paused_title">Dns Widget paused</string>
    <string name="notification_paused_text">Tap to resume.</string>
    <string name="not_connected_text">Not Connected</string>
    <string name="connected_progress_text">Connected…</string>
    <string name="connected_text">Connected</string>
    <string name="disconnected_progress_text">Disconnected…</string>
    <string name="disconnected_text">Disconnected</string>
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>
    <string name="title_menu_order_by_trans">Order by</string>
    <string name="menu_alphabetical_order_trans">Alphabetical order</string>
    <string name="menu_installation_date_trans">Installation date</string>
    <string name="menu_system_apps_trans">System apps</string>
    <string name="menu_user_apps_trans">User apps</string>
    <string name="filter_option_text">Filter Option</string>
    <string name="title_menu_show">Show</string>
    <string name="title_menu_select_option_trans">Select Option</string>
    <string name="menu_all_apps_trans">All apps</string>
    <string name="menu_no_apps_trans">No apps</string>
    <string name="title_menu_more_option">Multi - Select</string>
    <string name="menu_only_system_apps_trans">Only system apps</string>
    <string name="menu_only_user_apps_trans">Only user apps</string>
    <string name="menu_system_app_except_browser_trans">System app except browser</string>
    <string name="menu_custom_app_trans">Custom apps</string>
    <string name="page_refreshed_text">Page Refresh</string>
    <string name="menu_default_dns_trans">Default DNS</string>
    <string name="menu_custom_dns_trans">Custom DNS</string>
    <string name="at_least_one_item_text">You Can\'t Hide Both Item </string>
    <string name="filter_changes_text_trans">filterChanges</string>
    <string name="selected_app_text">Selected App</string>
    <string name="unspecified_text">Unspecified</string>
    <string name="none_text">None</string>
    <string name="begin_dns_speed_test_text">Begin Dns Speed Test</string>
    <string name="use_it_text">Use It</string>
    <string name="start_stop_text">Start / Stop DNS </string>
    <string name="added_text">added </string>
    <string name="removed_text">removed </string>
    <string name="custom_dns_enter_manually_text">Custom DNS (Enter Manually)</string>
    <string name="please_enter_dns_name_text">Please enter dns name</string>
    <string name="please_enter_dns_value_text">Please enter DNS!</string>
    <string name="dns_type_text">DNS Type</string>
    <string name="use_dnsv4_text">Use DnsV4</string>
    <string name="use_dnsv6_text">Use DnsV6</string>
    <string name="automation_text">Automation</string>
    <string name="start_on_boot_text">Start on Boot</string>
    <string name="start_on_boot_summary_text">Automatically start DNS Widget when your phone tuned on</string>
    <string name="automatically_start_wifi_text">Automatically start (Wifi)</string>
    <string name="start_wifi_summary_text">Automatically start DNS Widget when connecting to wifi network</string>
    <string name="automatically_start_mobile_text">Automatically start (Mobile)</string>
    <string name="start_mobile_summary_text">Automatically start DNS Widget when connecting to mobile network</string>
    <string name="system_setting_text">System Settings</string>
    <string name="use_dark_mode_text">Use Dark Mode</string>
    <string name="modify_notification_text">Modify Notification</string>
    <string name="notification_with_network_speed_text">Notification with network speed</string>
    <string name="notification_with_more_option_text">Notification with more option</string>
    <string name="clear_cache_text">Clear Cache</string>
    <string name="help_support_text">Help &amp; Support</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="report_a_bug_text">Report A Bug</string>
    <string name="report_a_bug_summary_text">Submit an issue on Github issue page</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="send_feedback_summary_text">submit feedback to fix the app bug</string>
    <string name="at_least_one_dns_text">At least one Dns configuration is required </string>
    <string name="off_trans_text">Off</string>
    <string name="on_trans_text">On</string>
    <string name="automatic_at_sunset_trans_text">Automatic at sunset</string>
    <string name="set_by_battery_saver_trans_text">Set by battery saver</string>
    <string name="system_default_trans_text">System Default</string>
    <string name="current_theme_text">Current Theme</string>
    <string name="app_theme_text">App Theme</string>
    <string name="dark_theme_text">Dark Theme</string>
    <string name="change_language_text">"Change Language "</string>
    <string name="successfully_cache_data_is_deleted_text">Successfully Cache Data Is Deleted</string>
    <string name="confirm_delete_title_text" translatable="false">Confirm Delete....</string>
    <string name="delete_message_text" translatable="false">Are you sure you want to delete ?</string>
    <string name="empty_list_text" translatable="false">Empty App List Please Report it</string>
    <string name="important_custom_dns_text" translatable="false">Important Custom Dns!</string>
    <string name="custom_dns_message_text" translatable="false">Save Custom Dns Information to the App Database for Fast Dns selection</string>
    <string name="this_feature_added_soon_text" translatable="false" >This feature added soon</string>
    <string name="menu_default_dns" translatable="false">Default DNS</string>
    <string name="menu_custom_dns" translatable="false">Custom DNS</string>
    <string name="is_dns_active_text" translatable="false">isDnsActive</string>
    <string name="is_start_on_boot_text" translatable="false">isStartOnBoot</string>
    <string name="is_automatic_at_wifi_text" translatable="false">isAutomaticAtWifi</string>
    <string name="is_automatic_at_mobile_data" translatable="false">isAutomaticAtMobileData</string>
    <string name="dark_mode_text" translatable="false">Dark Mode</string>
    <string name="is_dark_mode_text" translatable="false">isDarkMode</string>
    <string name="off_text" translatable="false">Off</string>
    <string name="on_text" translatable="false">On</string>
    <string name="automatic_at_sunset_text" translatable="false">Automatic at sunset</string>
    <string name="set_by_battery_saver_text" translatable="false">Set by battery saver</string>
    <string name="system_default_text" translatable="false">System Default</string>
    <string name="title_menu_order_by" translatable="false">Order by</string>
    <string name="menu_alphabetical_order" translatable="false">Alphabetical order</string>
    <string name="menu_installation_date" translatable="false">Installation date</string>
    <string name="menu_system_apps" translatable="false">System apps</string>
    <string name="menu_user_apps" translatable="false">User apps</string>
    <string name="menu_custom_app" translatable="false">Custom apps</string>
    <string name="title_menu_select_option" translatable="false">Select Option</string>
    <string name="menu_all_apps" translatable="false">All apps</string>
    <string name="menu_no_apps" translatable="false">No apps</string>
</resources>