<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/dns_type_text">
        <SwitchPreferenceCompat
            app:key="useDnsv4"
            app:defaultValue="true"
            app:title="@string/use_dnsv4_text" />
        <SwitchPreferenceCompat
            app:key="useDnsv6"
            app:title="@string/use_dnsv6_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/automation_text">
        <CheckBoxPreference
            app:key="start_on_boot"
            app:summary="@string/start_on_boot_summary_text"
            app:title="@string/start_on_boot_text" />

        <CheckBoxPreference
            app:key="start_wifi"
            app:summary="@string/start_wifi_summary_text"
            app:title="@string/automatically_start_wifi_text" />
        <CheckBoxPreference
            app:key="start_mobile"
            app:summary="@string/start_mobile_summary_text"
            app:title="@string/automatically_start_mobile_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/system_setting_text">
        <Preference
            app:key="useDarkTheme"
            app:title="@string/use_dark_mode_text" />


        <ListPreference
            android:defaultValue="en"
            android:entries="@array/LanguageList"
            android:entryValues="@array/languagesValues"
            android:key="changeLanguage"
            android:title="@string/change_language_text" />


        <ListPreference
            android:defaultValue="Notification with more option"
            android:entries="@array/notificationList"
            android:entryValues="@array/notificationValues"
            android:key="modifyNotification"
            android:title="@string/modify_notification_text" />

        <Preference
            app:key="clearCache"
            app:title="@string/clear_cache_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help_support_text">
        <Preference
            android:key="privacyPolicy"
            android:title="@string/privacy_policy_text" />
        <Preference
            android:key="sendFeedback"
            android:summary="@string/send_feedback_summary_text"
            android:title="@string/send_feedback_text" />
        <Preference
            android:key="reportABug"
            android:summary="@string/report_a_bug_summary_text"
            android:title="@string/report_a_bug_text" />

    </PreferenceCategory>

</PreferenceScreen>
