<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_main">
        <item android:id="@+id/nav_home"
            android:title="@string/action_home"
            android:checked="true"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_custom_dns"
            android:title="@string/action_custom_dns"
            android:checked="false"
            android:icon="@drawable/ic_dns"/>
        <item android:id="@+id/nav_dns_test"
            android:title="@string/action_dns_test"
            android:icon="@drawable/ic_dns_test"/>
        <item android:id="@+id/nav_app_filter"
            android:title="@string/action_app_filter"
            android:icon="@drawable/ic_app_filter"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_more">
        <item android:id="@+id/nav_share"
            android:title="@string/action_share"
            android:icon="@drawable/ic_share"/>
        <item android:id="@+id/nav_rate_us"
            android:title="@string/action_rate_us"
            android:checked="false"
            android:icon="@drawable/ic_rate_us"/>
        <item android:id="@+id/nav_more_app"
            android:title="@string/action_more_app"
            android:checked="false"
            android:icon="@drawable/ic_more_app"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_setting">
        <item android:id="@+id/nav_send_feedback"
            android:title="@string/action_send_feedback"
            android:icon="@drawable/ic_send_feedback"/>
        <item android:id="@+id/nav_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"/>
        <item android:id="@+id/nav_about"
            android:title="@string/action_about"
            android:icon="@drawable/ic_about"/>
    </group>


</menu>