<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sudoajay.dnswidget.ui.home.HomeFragment"
        android:label="@string/action_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_custom_dns"
        android:name="com.sudoajay.dnswidget.ui.customDns.CustomDnsFragment"
        android:label="@string/action_custom_dns"
        tools:layout="@layout/fragment_custom_dns"/>


    <fragment
        android:id="@+id/nav_dns_test"
        android:name="com.sudoajay.dnswidget.ui.dnsTest.DnsTestFragment"
        android:label="@string/action_dns_test"
        tools:layout="@layout/fragment_dns_test" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sudoajay.dnswidget.ui.setting.SettingFragment"
        android:label="@string/action_send_feedback"
        tools:layout="@layout/settings_activity" />


</navigation>